added posiden nft

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -41,7 +41,7 @@
               <!-- Battler's Card 2-->
               <div class="col-auto mb-3">
                 <div class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="/assets/img/kraken_lava.png" alt="Card image cap">
+                  <img class="card-img-top" src="/assets/img/kraken_posiden.png" alt="Card image cap">
                   <div class="card-body">
                    <ul class="list-group">
                        <li class="list-group-item">Experinece Level: 44</li>
