added battle message

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -28,12 +28,30 @@
             <div class="col-auto mb-3">
                 <div class="card" style="width: 18rem;">
                   <div class="card-body">
-                      <label for="checkbox">Death Match?</label>
-                   <input type="checkbox">
-                   <p class="card-text">only enter if your ready to loose your nft!</p>
+                      <h5 class="card-title">Battle Areana</h5>
+                      <p class="cart-text">Welcome to the kraken battle areana where you 
+                        and your friends can battle your krakens!
+                      </p>
+
+                      <h5 class="card-title">How do I win?</h5>
+                        <p class="card-text"> Our alogrithem uses metadata contained in each NFT to
+                           determine the winner. Each NFT has visable "stats" data, 
+                          and has alot of hidden data. All this data is ran through various Machine Learning 
+                          and Artifical Intelligence models to determine the winner.
+                        </p>
+                       
+                    <h5>Battle Location:</h5>
+                    <p class="card-text">Location can have a large effect of krakens so be careful.</p>
+                   <select style="width: 100%;height: 40px;">
+                      <option value="">Alantis</option>
+                      <option value="">Volcano</option>
+                      <option value="">Space</option>
+                      <option value="">Quantum Relm</option>
+                  </select>
+
                   </div>
                   <div class="card-footer"> 
-                      <a style="width: 100%; margin: 0;" href="#" class="btn btn-primary">Release The Kraken!</a>
+                     
                   </div>
                 </div>
               </div>
