--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid mt-4">
-    <h1>Are you ready to release the kraken?</h1>
+    <h1 class="text-center">Let's get kraken!</h1>
     <div class="container">
         <div class="row justify-content-center">
 
@@ -9,6 +9,7 @@
                 <img class="card-img-top" src="/assets/img/kraken_lava.png" alt="Card image cap">
                 <div class="card-body">
                  <ul class="list-group">
+                     <li class="list-group-item">NFT: 1b1f3e45a4af93f1b1...</li>
                      <li class="list-group-item">Experinece Level: 44</li>
                      <li class="list-group-item">Attack: 44</li>
                      <li class="list-group-item">Defense: 22</li>
@@ -62,9 +63,10 @@
                   <img class="card-img-top" src="/assets/img/kraken_posiden.png" alt="Card image cap">
                   <div class="card-body">
                    <ul class="list-group">
-                       <li class="list-group-item">Experinece Level: 44</li>
-                       <li class="list-group-item">Attack: 44</li>
-                       <li class="list-group-item">Defense: 22</li>
+                      <li class="list-group-item">NFT: 4af931b1f3e45af1b1...</li>
+                       <li class="list-group-item">Experinece Level: 74</li>
+                       <li class="list-group-item">Attack: 32</li>
+                       <li class="list-group-item">Defense: 62</li>
                        <li class="list-group-item">2 X Gold Sheild Mulitplier</li>
                        <li class="list-group-item">1 X Shield</li>
                        <li class="list-group-item">1 X Lava Ability</li>
