--- a/src/app/timeline/timeline.component.html
+++ b/src/app/timeline/timeline.component.html
@@ -1,12 +1,27 @@
 <section class="timeline">
+  <div class="container">
+    <div class="card">
+      <h2 class="card-title">Project Overview & Timeline</h2>
+      <p>continue readying to learn about our project and potential investment opportunities.</p>
+    
+    </div>
+  </div>
     <div class="container">
       <div class="timeline-item">
         <div class="timeline-img"></div>
   
-        <div class="timeline-content js--fadeInLeft">
-          <h2>Title</h2>
-          <div class="date">1 MAY 2016</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi amet in dolores. Alias, ullam.</p>
+        <div class="timeline-content js--fadeInLeft card">
+          <h2 class="card-title">How it all started</h2>
+          <div class="date">January 06 2022</div>
+          <p>After weeks of peruasion, my brother Nick convinced me to 
+            start a NFT project. The original idea was to make a game 
+            just to learn about NFT's myself and being a masters Computer Science 
+            with specialization in Data Science, i thought it would be fun to play around with 
+            creating NFT data and passing it through some Machine Learning 
+            models I was learning in class.  
+
+          
+          </p>
           <a class="bnt-more" href="javascript:void(0)">More</a>
         </div>
       </div> 
