added real content to timeline

--- a/src/app/timeline/timeline.component.html
+++ b/src/app/timeline/timeline.component.html
@@ -7,130 +7,170 @@
     </div>
   </div>
     <div class="container">
+      <!--January 6 2022-->
       <div class="timeline-item">
         <div class="timeline-img"></div>
-  
-        <div class="timeline-content js--fadeInLeft card">
-          <h2 class="card-title">How it all started</h2>
-          <div class="date">January 06 2022</div>
-          <p>After weeks of peruasion, my brother Nick convinced me to 
-            start a NFT project. The original idea was to make a game 
-            just to learn about NFT's myself and being a masters Computer Science 
-            with specialization in Data Science, i thought it would be fun to play around with 
-            creating NFT data and passing it through some Machine Learning 
-            models I was learning in class.  
-
-          
-          </p>
-          <a class="bnt-more" href="javascript:void(0)">More</a>
-        </div>
-      </div> 
-  
-      <div class="timeline-item">
-  
-        <div class="timeline-img"></div>
-  
         <div class="timeline-content timeline-card js--fadeInRight">
-          <div class="timeline-img-header">
-            <h2>Card Title</h2>
+          <div class="timeline-img-header" 
+                style=" background: url(/assets/img/drawingv1.png);
+                background-size: cover; overflow: hidden;">
+            <h2>How This Project Began</h2>
           </div>
           <div class="date">25 MAY 2016</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi amet in dolores. Alias, ullam.</p>
-          <a class="bnt-more" href="javascript:void(0)">More</a>
-        </div>
-  
-      </div>   
-  
-      <div class="timeline-item">
-  
-        <div class="timeline-img"></div>
-  
-        <div class="timeline-content js--fadeInLeft">
-          <div class="date">3 JUN 2016</div>
-          <h2>Quote</h2>
-          <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta explicabo debitis omnis dolor iste fugit totam quasi inventore!</blockquote>
+          <p class="card-text text-center font-italic">After weeks of peruasion, my brother Nick convinced me to 
+            start a NFT project. The original idea was to make a game 
+            just to learn about NFT's for myself and being a Computer Science masters student
+            with a specialization in Data Science, I thought it would be fun to play around with 
+            NFT data and pass the data into some Machine Learning 
+            models I was learning in class.  
+          </p> 
+          <p class="card-text text-center font-italic">...But step one, i needed art. So I decided to draw it myself.</p>      
+             <!-- <a class="bnt-more" href="javascript:void(0)">More</a> -->
         </div>
       </div>   
-  
-      <div class="timeline-item">
-  
-        <div class="timeline-img"></div>
-  
-        <div class="timeline-content js--fadeInRight">
-          <h2>Title</h2>
-          <div class="date">22 JUN 2016</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi amet in dolores. Alias, ullam.</p>
-          <a class="bnt-more" href="javascript:void(0)">More</a>
+
+   <!--January 09 2022-->
+   <div class="timeline-item">
+    <div class="timeline-img"></div>
+    <div class="timeline-content timeline-card js--fadeInRight">
+      <div class="timeline-img-header" 
+            style=" background: url(/assets/img/first_nft.png);
+            background-size: cover; overflow: hidden;">
+        <h2>How This Project Began</h2>
+      </div>
+      <div class="date">09 January 2022</div>
+        <h4 class="text-center">Research</h4>
+        <p class="card-text text-center font-italic">
+          I had to complete alot of reasearch from how to create 
+          smart contracts to write to the blockchain, how to 
+          use programs that would mix and max image layers to 
+          generate unique images for the nft's. This date 
+          marks the completion of the first kraken make on the 
+          computer. 
+        </p> 
+        <p class="card-text text-center font-italic">
+         While this was going to be a personal project, research showed 
+         me that gas, minting, fees and other expenses are very volitile. 
+         I also learned that the coolest part of NFT's are the community 
+         that surrounds them, so after some thought i decided that 
+         this project might need outside funding for expenses and to 
+         drive awarness to the project. 
+        </p> 
+    </div>
+  </div>   
+
+     <!--January 12 2022-->
+     <div class="timeline-item">
+      <div class="timeline-img"></div>
+      <div class="timeline-content timeline-card js--fadeInRight">
+        <div class="timeline-img-header" 
+              style=" background: url(/assets/img/LegendaryWeapons.png);
+              background-size: cover; overflow: hidden;">
+          <!-- <h2>How This Project Began</h2> -->
         </div>
-      </div>   
-  
-      <div class="timeline-item">
-  
-        <div class="timeline-img"></div>
-  
-        <div class="timeline-content timeline-card js--fadeInLeft">
-          <div class="timeline-img-header">
-            <h2>Card Title</h2>
-          </div>
-          <div class="date">10 JULY 2016</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi amet in dolores. Alias, ullam.</p>
-          <a class="bnt-more" href="javascript:void(0)">More</a>
+        <div class="date">12 January 2022</div>
+          <h4 class="text-center">Begin Early Stage Seed Round</h4>
+          <p class="card-text text-center font-italic">
+            Early stage presale for God and Legendary Krakens begin as a way to 
+            find early stage funding. Funding will go towards minting, gas, 
+            fees, development and towards building a pasionate community behind the project 
+            before the drop. 
+          </p> 
+
+          <h4 class="text-center">Legendary Package</h4>
+          <p class="card-text text-center font-italic">
+            The Legendary Package includes one legendary kraken and one "Gods Gift" weapon.
+            The legendary kraken is worth 0.5% of crypto_kraken and the weapon makes any kraken 
+            to "God" level while it holds it. (ONLY 20/200 will be sold at moment)
+          </p> 
+          <h4 class="text-center">God Package</h4>
+          <p class="card-text text-center font-italic">
+            The God package is reserved for people who help build this project from the 
+            very beginning. This package also includes 2 Legendary Packages.
+           (ONLY 10 released for the whole life of this project)
+          </p> 
+      </div>
+    </div>   
+
+   <!--February 1st-->
+   <div class="timeline-item">
+    <div class="timeline-img"></div>
+    <div class="timeline-content timeline-card js--fadeInRight">
+      <div class="timeline-img-header" 
+            style=" background: url(/assets/img/wow!.png);
+            background-size: cover; overflow: hidden;">
+        <!-- <h2>Goal: Find Finding Start Project Development</h2> -->
+      </div>
+      <div class="date">1 February 2022</div>
+        <h4 class="text-center">Build Team, Find Seed Round Funding, Start Development</h4>
+        <p class="card-text text-center font-italic">
+          The goals by this date are to build a team to build this project from the 
+          ground up and to obtain the needed funding the pursue this project. 
+        </p> 
+    </div>
+  </div>   
+
+   <!--Future-->
+   <div class="timeline-item">
+    <div class="timeline-img"></div>
+    <div class="timeline-content timeline-card js--fadeInRight">
+      <div class="timeline-img-header" 
+            style=" background: url(/assets/img/first_releases.png);
+            background-size: cover; overflow: hidden;">
+        <!-- <h2>Goal: Find Finding Start Project Development</h2> -->
+      </div>
+      <div class="date">TBD based on community reaching 1000 active members</div>
+        <h4 class="text-center">Release First Editions To Public</h4>
+        <p class="card-text text-center font-italic">
+         At this point everything should be ready to be released to public. 
+         People should be able to begin buying, trading, growing and 
+         batteling their krakens!
+        </p> 
+    </div>
+  </div>   
+     <!--Future-->
+     <div class="timeline-item">
+      <div class="timeline-img"></div>
+      <div class="timeline-content timeline-card js--fadeInRight">
+        <div class="timeline-img-header" 
+              style=" background: url(/assets/img/community.png);
+              background-size: cover; overflow: hidden;">
+          <!-- <h2>Goal: Find Finding Start Project Development</h2> -->
         </div>
-      </div>   
-  
-      <div class="timeline-item">
-  
-        <div class="timeline-img"></div>
-  
-        <div class="timeline-content timeline-card js--fadeInRight">
-          <div class="timeline-img-header">
-            <h2>Card Title</h2>
-          </div>
-          <div class="date">30 JULY 2016</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi amet in dolores. Alias, ullam.</p>
-          <a class="bnt-more" href="javascript:void(0)">More</a>
+        <div class="date">TBD based on community reaching milestones of active members</div>
+          <h4 class="text-center">Release To Public</h4>
+          <p class="card-text text-center font-italic">
+           We will continue to slowly release more krakens as the community grows 
+           and the demanding increases. 
+          </p> 
+      </div>
+    </div> 
+
+     <!--Future-->
+     <div class="timeline-item">
+      <div class="timeline-img"></div>
+      <div class="timeline-content timeline-card js--fadeInRight">
+        <div class="timeline-img-header" 
+              style=" background: url(/assets/img/cross-blockchain.png);
+              background-size:auto; overflow: hidden;">
+          <!-- <h2>Goal: Find Finding Start Project Development</h2> -->
         </div>
-      </div>  
-  
-      <div class="timeline-item">
-  
-        <div class="timeline-img"></div>
-  
-        <div class="timeline-content js--fadeInLeft">
-          <div class="date">5 AUG 2016</div>
-          <h2>Quote</h2>
-          <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta explicabo debitis omnis dolor iste fugit totam quasi inventore!</blockquote>
-        </div>
-      </div>   
-  
-      <div class="timeline-item">
-  
-        <div class="timeline-img"></div>
-  
-        <div class="timeline-content timeline-card js--fadeInRight">
-          <div class="timeline-img-header">
-            <h2>Card Title</h2>
-          </div>
-          <div class="date">19 AUG 2016</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi amet in dolores. Alias, ullam.</p>
-          <a class="bnt-more" href="javascript:void(0)">More</a>
-        </div>
-      </div>  
-  
-      <div class="timeline-item">
-  
-        <div class="timeline-img"></div>
-  
-        <div class="timeline-content js--fadeInLeft">
-          <div class="date">1 SEP 2016</div>
-          <h2>Title</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi amet in dolores. Alias, ullam.</p>
-          <a class="bnt-more" href="javascript:void(0)">More</a>
-        </div>
-      </div>   
-  
-  
-  
+        <div class="date">Future</div>
+          <h4 class="text-center">Cross Collection </h4>
+          <p class="card-text text-center font-italic">
+            Based on community demands, other NFT collections of different 
+            crypto_beasts will be created that will have similar meta data 
+            so they can fight against krypto_krakens. 
+          </p> 
+          <h4 class="text-center">Cross Blockchain Battles</h4>
+          <p class="card-text text-center font-italic">
+            As more blockchains get created, different variations of 
+            krypto_krakens will be made more community selected blockchains. 
+            Krakens will be able to fight each other even if they are from 
+            different chains.
+          </p> 
+      </div>
+    </div> 
     </div>
   </section>
   
