fixed community message and timeline bottom pad...

--- a/src/app/timeline/timeline.component.html
+++ b/src/app/timeline/timeline.component.html
@@ -1,11 +1,7 @@
+
+  
+<h2 class="text-center">Project Timeline</h2>
 <section class="timeline">
-  <div class="container">
-    <div class="card">
-      <h2 class="card-title">Project Overview & Timeline</h2>
-      <p>continue readying to learn about our project and potential investment opportunities.</p>
-    
-    </div>
-  </div>
     <div class="container">
       <!--January 6 2022-->
       <div class="timeline-item">
@@ -14,9 +10,9 @@
           <div class="timeline-img-header" 
                 style=" background: url(/assets/img/drawingv1.png);
                 background-size: cover; overflow: hidden;">
-            <h2>How This Project Began</h2>
           </div>
-          <div class="date">25 MAY 2016</div>
+          <div class="date">06 January 2022</div>
+          <h4 class="text-center">How This Project Began</h4>
           <p class="card-text text-center font-italic">After weeks of peruasion, my brother Nick convinced me to 
             start a NFT project. The original idea was to make a game 
             just to learn about NFT's for myself and being a Computer Science masters student
@@ -36,7 +32,6 @@
       <div class="timeline-img-header" 
             style=" background: url(/assets/img/first_nft.png);
             background-size: cover; overflow: hidden;">
-        <h2>How This Project Began</h2>
       </div>
       <div class="date">09 January 2022</div>
         <h4 class="text-center">Research</h4>
@@ -66,7 +61,6 @@
         <div class="timeline-img-header" 
               style=" background: url(/assets/img/LegendaryWeapons.png);
               background-size: cover; overflow: hidden;">
-          <!-- <h2>How This Project Began</h2> -->
         </div>
         <div class="date">12 January 2022</div>
           <h4 class="text-center">Begin Early Stage Seed Round</h4>
