--- a/src/app/community-driven/community-driven.component.html
+++ b/src/app/community-driven/community-driven.component.html
@@ -1,23 +1,19 @@
 <!--Display a parralax section which has kraken grid -->
-<div class="parallax text-center container" style="color: white; border-radius: 15px;">
+<div class="text-center container" style="padding: 20px;">
 
     <figure class="text-center">
         <blockquote class="blockquote">
-        <h2>Community Driven</h2>
+        <h2>"Community Driven" Project</h2>
 
-          <p>
-            This is a "Community Driven" Project. This means that our NFT 
-            drops are dependent on the community sizes and majority request. 
-           
-            Additionally with more community members , we would have more NFT krakens battling, 
-            we would have more metadata to run through our algorithems to make preditctions. 
-    
-            So it other words, the battles will continue grow more interesting as more community 
-            members join!
+          <p style="padding: 20px;">
+            NFT's available & drops are dependent on the number of active members
+            and the communities demand. 
+            <br>
+            First drop is at 1000 active community members.
             </p>
         </blockquote>
         <figcaption class="blockquote-footer">
-            Community discord link: <a href="#">Join Discord Communinty</a>
+            <a href="#">Join our discord community</a>
         </figcaption>
       </figure>
         
