last commit of night

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- Image and text -->
-<nav class="navbar navbar-dark bg-dark border-bottom border-success border-2" style="border-color:aquamarine;">
+<nav class="navbar navbar-dark bg-dark border-bottom border-top border-2" style="border-color:aquamarine !important;">
     <a class="navbar-brand" href="#">
       <img src="/assets/img/kraken_posiden.png" width="30" height="30" class="d-inline-block align-top" alt="" style="border-radius: 50%; margin-left: 10px;">
       CryptoKraken 
