fixed card battle  demo layout

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,91 +1,130 @@
-<div class="container-fluid mt-4">
-    <h1 class="text-center">Let's get kraken!</h1>
-    <div class="container">
-        <div class="row justify-content-center">
+<div class="container">
+    <!-- <h1 class="text-center">Let's get kraken!</h1> -->
+        
 
-            <!--First Battlers Card-->
-            <div class="col-auto mb-3">
-              <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="/assets/img/kraken_lava.png" alt="Card image cap">
-                <div class="card-body">
-                 <ul class="list-group">
-                     <li class="list-group-item">NFT: 1b1f3e45a4af93f1b1...</li>
-                     <li class="list-group-item">Experinece Level: 44</li>
-                     <li class="list-group-item">Attack: 44</li>
-                     <li class="list-group-item">Defense: 22</li>
-                     <li class="list-group-item">2 X Gold Sheild Mulitplier</li>
-                     <li class="list-group-item">1 X Shield</li>
-                     <li class="list-group-item">1 X Lava Ability</li>
-                 </ul>
-                </div>
-                <div class="card-footer"> 
-                    <a style="width: 100%; margin: 0;" href="#" class="btn btn-primary">Release The Kraken!</a>
-                </div>
-              </div>
-            </div>
-
-
-            <!-- Battle Options -->
-            <div class="col-auto mb-3">
-                <div class="card" style="width: 18rem;">
-                  <div class="card-body">
-                      <h5 class="card-title">Battle Areana</h5>
-                      <p class="cart-text">Welcome to the kraken battle areana where you 
-                        and your friends can battle your krakens!
-                      </p>
-
-                      <h5 class="card-title">How do I win?</h5>
-                        <p class="card-text"> Our alogrithem uses metadata contained in each NFT to
-                           determine the winner. Each NFT has visable "stats" data, 
+              <!---------------------------- Battle Options ---------------------------->
+              <div class="row justify-content-center">
+                <div class="col">
+                  <div class="card" style="margin-top: 6px; margin-bottom: 6px;">
+                  <!-- <div class="card"> -->
+                    <div class="card-body text-center">
+                        <h2 class="card-title">  Crypto Kraken Battle Areana</h2>
+                        <p class="card-text lh-1" >
+                          Welcome to the kraken battle areana where you 
+                          and your friends can battle your krakens! Crypto_kraken is a NFT project 
+                          and game where you raise krypto krakens from eggs, train then for battle, 
+                          eat other krakens to gain abilities, and battle them against friends! 
+                        </p>
+                        <p class="card-text lh-1"> Our alogrithem uses metadata contained in each NFT to
+                          determine the winner. Each NFT has visable "stats" data, 
                           and has alot of hidden data. All this data is ran through various Machine Learning 
                           and Artifical Intelligence models to determine the winner.
                         </p>
-                       
-                    <h5>Battle Location:</h5>
-                    <p class="card-text">Location can have a large effect of krakens so be careful.</p>
-                   <select style="width: 100%;height: 40px;">
-                      <option value="">Alantis</option>
-                      <option value="">Volcano</option>
-                      <option value="">Space</option>
-                      <option value="">Quantum Relm</option>
-                  </select>
 
-                  </div>
-                  <div class="card-footer"> 
-                     
-                  </div>
+                    </div>
+                    </div>
                 </div>
               </div>
 
-              <!-- Battler's Card 2-->
-              <div class="col-auto mb-3">
-                <div class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="/assets/img/kraken_posiden.png" alt="Card image cap">
-                  <div class="card-body">
-                   <ul class="list-group">
-                      <li class="list-group-item">NFT: 4af931b1f3e45af1b1...</li>
-                       <li class="list-group-item">Experinece Level: 74</li>
-                       <li class="list-group-item">Attack: 32</li>
-                       <li class="list-group-item">Defense: 62</li>
-                       <li class="list-group-item">2 X Gold Sheild Mulitplier</li>
-                       <li class="list-group-item">1 X Shield</li>
-                       <li class="list-group-item">1 X Lava Ability</li>
-                   </ul>
+
+         
+           
+
+              <!-------------------------------Battle Cards --------------------------------------------------->
+              <div class="row justify-content-center">
+                <!--Current Player Battle Card-->
+                <div class="col side-by-side">
+                  <div class="card">
+                    <img class="card-img-top" src="/assets/img/kraken_lava.png" alt="Card image cap">
+                   
+                    <ul class="list-group">
+                        <li class="list-group-item">0x1b1f3e45a4af93f1b1...</li>
+                        <li class="list-group-item">Experinece Level: 44</li>
+                        <li class="list-group-item">Attack: 44</li>
+                        <li class="list-group-item">Defense: 22</li>
+                        <li class="list-group-item">2 X Gold Sheild Mulitplier</li>
+                        <li class="list-group-item">1 X Shield</li>
+                        <li class="list-group-item">1 X Lava Ability</li>
+                    </ul>
+                   
+                    <div class="card-footer"> 
+                        <a style="width: 100%; margin: 0;" href="#" class="btn btn-primary">Release The Kraken!</a>
+                    </div>
                   </div>
-                  <div class="card-footer"> 
-                      <a style="width: 100%; margin: 0;" href="#" class="btn btn-primary">Release The Kraken!</a>
+                </div>
+         
+                <!--Opponent Card-->
+                <div class="col side-by-side">
+                  <div class="card">
+                    <img class="card-img-top" src="/assets/img/kraken_posiden.png" alt="Card image cap">
+                    
+                    <ul class="list-group">
+                        <li class="list-group-item">0x4af931b1f3e45af1b1...</li>
+                        <li class="list-group-item">Experinece Level: 74</li>
+                        <li class="list-group-item">Attack: 32</li>
+                        <li class="list-group-item">Defense: 62</li>
+                        <li class="list-group-item">2 X Gold Sheild Mulitplier</li>
+                        <li class="list-group-item">1 X Shield</li>
+                        <li class="list-group-item">1 X Lava Ability</li>
+                    </ul>
+                 
+                    <div class="card-footer"> 
+                        <a style="width: 100%; margin: 0;" href="#" class="btn btn-primary">Release The Kraken!</a>
+                    </div>
                   </div>
                 </div>
               </div>
+    </div>
 
-  
+    <!-----------Battle Detail -------------------------------->
+<div class="container">
+  <div class="row">
+    <div class="col">
+          <div class="card lh-1" style="padding: 12px;">
+            <h4 class="text-center">Battle Detail</h4>
+            <p class="card-text text-center">Battle details will effect our algorithem differently so choose information tactically</p>
 
+            <div class="form-group">
+            <!--location-->
+            <!-- <p class="text-muted">Battle location can have a large effect on the outcome of the battle.</p> -->
+            <label for="location">Battle Location</label>
+            <select class="form-select" name="location" id="" style="width: 100%;">
+              <option value="">Atlantis</option>
+              <option value="">Volcano</option>
+              <option value="">Space</option>
+            </select>
+          
 
+            <!--Cross Blockchain-->
+            <!-- <p class="text-muted">Fight krypto krakens that are on different blockchain.</p> -->
+            <label for="location">Cross Blockchain Settings</label>
+            <select class="form-select" name="location" id="" style="width: 100%;">
+              <option value="">Etherium - Polygon</option>
+              <option value="">Polygon - Solana </option>
+              <option value="">Solana - Etherium </option>
+            </select>
+        
 
+            <!--Cross Blockchain-->
+            <!-- <p class="text-muted">Fight krypto krakens that are on different blockchain.</p> -->
+            <label for="location">Cross Blockchain Settings</label>
+            <select class="form-select" name="location" id="" style="width: 100%;">
+              <option value="">Atlantis</option>
+              <option value="">Volcano</option>
+              <option value="">Space</option>
+            </select>
+          </div>
+
+         
+    <br>
+            
+           
 
 
 
 
           </div>
     </div>
+  </div>
+  
 </div>
