added team,investor, and footer components

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -15,11 +15,11 @@
                           and game where you raise krypto krakens from eggs, train then for battle, 
                           eat other krakens to gain abilities, and battle them against friends! 
                         </p>
-                        <p class="card-text lh-1"> Our alogrithem uses metadata contained in each NFT to
+                        <!-- <p class="card-text lh-1"> Our alogrithem uses metadata contained in each NFT to
                           determine the winner. Each NFT has visable "stats" data, 
                           and has alot of hidden data. All this data is ran through various Machine Learning 
                           and Artifical Intelligence models to determine the winner.
-                        </p>
+                        </p> -->
 
                     </div>
                     </div>
