fixed hero, investor, team, added images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,6 @@
 <app-hero></app-hero>
 <app-community-driven></app-community-driven>
 <app-timeline></app-timeline>
+<app-team></app-team>
+<app-investor></app-investor>
+<app-footer></app-footer>
