--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,17 @@
-<p>footer works!</p>
+<div class="d-flex flex-column">
+    <div id="page-content">
+      <div class="container text-center">
+        <div class="row justify-content-center">
+          <div class="col-md-7">
+            <h1 class="fw-light mt-4 text-white">Questions?</h1>
+            <p class="lead text-white-50">Contact us at zjeffreys@seattleu.edu</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
+      <div class="container text-center">
+        <small>Copyright &copy; crypto_kraken.co</small>
+      </div>
+    </footer>
+</div>
