--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -37,19 +37,14 @@
                   <div class="card">
                     <img class="card-img-top" src="/assets/img/kraken_lava.png" alt="Card image cap">
                    
-                    <ul class="list-group">
-                        <li class="list-group-item">0x1b1f3e45a4af93f1b1...</li>
+                    <ul class="list-group lh-1">
+                        <li class="list-group-item ">0x1b1f3e45a4af93f1b</li>
                         <li class="list-group-item">Experinece Level: 44</li>
                         <li class="list-group-item">Attack: 44</li>
                         <li class="list-group-item">Defense: 22</li>
-                        <li class="list-group-item">2 X Gold Sheild Mulitplier</li>
-                        <li class="list-group-item">1 X Shield</li>
-                        <li class="list-group-item">1 X Lava Ability</li>
+                        <li class="list-group-item">Ability: Lava</li>
                     </ul>
-                   
-                    <div class="card-footer"> 
-                        <a style="width: 100%; margin: 0;" href="#" class="btn btn-primary">Release The Kraken!</a>
-                    </div>
+   
                   </div>
                 </div>
          
@@ -57,20 +52,14 @@
                 <div class="col side-by-side">
                   <div class="card">
                     <img class="card-img-top" src="/assets/img/kraken_posiden.png" alt="Card image cap">
-                    
-                    <ul class="list-group">
-                        <li class="list-group-item">0x4af931b1f3e45af1b1...</li>
-                        <li class="list-group-item">Experinece Level: 74</li>
-                        <li class="list-group-item">Attack: 32</li>
-                        <li class="list-group-item">Defense: 62</li>
-                        <li class="list-group-item">2 X Gold Sheild Mulitplier</li>
-                        <li class="list-group-item">1 X Shield</li>
-                        <li class="list-group-item">1 X Lava Ability</li>
-                    </ul>
+                    <ul class="list-group lh-1">
+                      <li class="list-group-item">0x4af91b1f3e45ab1</li>
+                      <li class="list-group-item">Experinece Level: 44</li>
+                      <li class="list-group-item">Attack: 44</li>
+                      <li class="list-group-item">Defense: 22</li>
+                      <li class="list-group-item">Ability: Lava</li>
+                  </ul>
                  
-                    <div class="card-footer"> 
-                        <a style="width: 100%; margin: 0;" href="#" class="btn btn-primary">Release The Kraken!</a>
-                    </div>
                   </div>
                 </div>
               </div>
