--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,4 +1,7 @@
-<div class="container">
+<canvas #tmpl></canvas>
+
+<!---Main Hero-->
+<div class="container" style="display: none;">
     <!-- <h1 class="text-center">Let's get kraken!</h1> -->
         
 
