--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,7 +1,12 @@
-<canvas #tmpl></canvas>
+<div class="container">
+  <h1 class='text-center' style="color: white; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Crypto Kraken</h1>
+
+  <canvas #canvas id="canvas" style="max-width: 100%;"> </canvas>
+</div>
+
 
 <!---Main Hero-->
-<div class="container" style="display: none;">
+<div class="container">
     <!-- <h1 class="text-center">Let's get kraken!</h1> -->
         
 
