Followling tutorial using playground component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<app-navbar></app-navbar>
-<app-hero></app-hero>
+<app-navbar style="z-index: 99;"></app-navbar>
+<!-- <app-hero></app-hero> -->
 <!-- <app-community-driven></app-community-driven>
 <app-timeline></app-timeline>
 <app-team></app-team>
 <app-investor></app-investor>
 <app-footer></app-footer> -->
+<app-playground></app-playground>
